Test/exceptions/ParseErrors.dfy.expect
ParseErrors.dfy(9,15): Error: the number of left-hand sides (2) and right-hand sides (1) must match for a multi-assignment
ParseErrors.dfy(10,15): Error: The type of the first expression is not a failure type in :- statement
ParseErrors.dfy(16,4): Error: Mismatch in expected number of LHSs and RHSs
3 resolution/type errors detected in ParseErrors.dfy
